Adding a JavaScript test file

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 
 *{/*Toutes les balises auront la couleur rouge*/
-    color:red;    
+    /*color:red;    */
 }
 .parableu{/*Toute balise de la classe parableu aura la couleur bleue*/
     color:blue;
@@ -56,6 +56,23 @@ img
     align-self: center;
     border: 1px solid black;
     border-radius: 10px 0px 10px 0;
+}
+
+#Sect1
+{
+    height:215px;
+    background-color: #FF6600
+}
+#Sect2
+{
+    height: 215px;
+    text-align: center;
+}
+
+#Sect3
+{
+    height: 215px;
+    background-color: #4c4c4c
 }
 
 
